# MyToolbox

./: .gitattributes  .gitignore  README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/threshold/mytoolbox/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/threshold/mytoolbox/jni/: NativeJniTest.kt  NativeResampleJniTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  native-resample.cpp
app/src/main/cpp/header/: log.h  main.h
app/src/main/java/com/threshold/mytoolbox/: MainActivity.kt  MySLogTest.java  SLogTest.java
app/src/main/java/com/threshold/mytoolbox/jni/: NativeLibJni.kt  NativeResampleJni.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/threshold/mytoolbox/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
toolbox/: CMakeLists.txt  build.gradle  generate_doc.bat  javadoc_args.txt  proguard-rules.pro
toolbox/src/androidTest/: AndroidManifest.xml
toolbox/src/androidTest/java/com/threshold/jni/: AssetsJniTest.java  IOHelperJniTest.java  MsgQueueHandlerJniTest.java
toolbox/src/androidTest/java/com/threshold/toolbox/: AssetsUtilTest.java  AutoCoverBufferTest.java  Base64UtilTest.java  ExampleInstrumentedTest.java  FileUtilTest.java  MessageDispatcherTest.java  RingBufferTest.java  StoragePathUtilTest.java  ToastUtilTest.java
toolbox/src/androidTest/java/com/threshold/toolbox/log/: LLogTest.java  LogTest.java  SLogTest.java
toolbox/src/main/: AndroidManifest.xml
toolbox/src/main/cpp/: jni_assets.c  jni_auto_cover_buffer.c  jni_io_helper.c  jni_msg_queue_handler.c  jni_ring_buffer.c  jni_toolbox.c  local_socket_client.h  local_socket_protocol.h  local_socket_server.c  local_socket_server.h  mlog.c  mlog.h
toolbox/src/main/cpp/lcu/config/: lcu_version.h
toolbox/src/main/java/com/threshold/jni/: AssetsJni.java  AutoCoverBufferJni.java  IOHelperJni.java  MsgQueueHandlerJni.java  RingBufferJni.java  ToolboxJni.java
toolbox/src/main/java/com/threshold/permissions/: AbstractPermissionActivity.java  NotificationsUtils.java  PermissionActivity.java  PermissionController.java  PermissionManager.java  SystemSettingUtils.java
toolbox/src/main/java/com/threshold/toolbox/: AssetsUtil.java  AsyncFileWriter.java  AutoCoverBuffer.java  Base64Util.java  BitConverter.java  BufferWrapper.java  ByteRingBuffer.java  ByteUtil.java  DateUtil.java  Density.java  DensityUtil.java  FileUtil.java  FileWriter.java  HexUtil.java  JsonUtil.java  MessageDispatcher.java  NativeLibHelper.java  PcmWavUtil.java  Resample.java  RingBuffer.java  SharedPrefsUtil.java  StoragePathUtil.java  TextUtil.java  ToastUtil.java
toolbox/src/main/java/com/threshold/toolbox/log/: AbsLogger.java  ILog.java  LogPriority.java  LogTag.java  LogcatLogger.java  LogcatPrinter.java  LoggerConfig.java  LoggerFactory.java  Printer.java  SLog.java  SimpleDiskPrinter.java  TagFinder.java  TagFinderCache.java  TraceUtil.java
toolbox/src/main/java/com/threshold/toolbox/log/llog/: LLog.java  StackTraceLog.java  StackTraceLogger.java  TraceLoggerDefaultPrinter.java  TracerLogger.java
toolbox/src/main/java/com/threshold/toolbox/toasty/: Toasty.java  ToastyUtils.java
toolbox/src/main/res/layout/: toast_with_image.xml
toolbox/src/main/res/values/: strings.xml
toolbox/src/main/res/values-zh-rCN/: strings.xml
toolbox/src/test/java/com/threshold/toolbox/: ByteRingBufferTest.java  ByteUtilTest.java  ExampleUnitTest.java  FileOrDirectoryDeterminerTest.java  HexUtilTest.kt  JsonTest.java  PcmWavUtilTest.java  RealtimeResampleTest.java  ResampleTest.java  StackTraceTest.java
toolbox/src/test/java/com/threshold/toolbox/log/: TagFinderTest.java
